[gd_scene load_steps=6 format=3 uid="uid://dutar8wxmt05x"]

[ext_resource type="Script" path="res://main.gd" id="1_jqe2l"]
[ext_resource type="StyleBox" uid="uid://cvieolp1b5y87" path="res://Sprites/popStyle.tres" id="2_pfswi"]
[ext_resource type="Texture2D" uid="uid://bsg42orfqwigd" path="res://Sprites/marblebackground.jpg" id="2_rxi75"]
[ext_resource type="FontFile" uid="uid://c52m5l4oqkxws" path="res://Sprites/Roboto-Regular.ttf" id="3_62dwi"]
[ext_resource type="Texture2D" uid="uid://dtcbntg3ynw11" path="res://Sprites/logo.png" id="3_rufve"]

[node name="Main" type="Node2D"]
script = ExtResource("1_jqe2l")

[node name="MainMenu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1152.0
offset_bottom = 648.0
grow_horizontal = 2
grow_vertical = 2

[node name="Menu" type="VBoxContainer" parent="MainMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -35.0
offset_top = -50.5
offset_right = 35.0
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 4

[node name="Play" type="Button" parent="MainMenu/Menu"]
layout_mode = 2
text = "Play"

[node name="Options" type="Button" parent="MainMenu/Menu"]
layout_mode = 2
text = "Options"

[node name="Quit" type="Button" parent="MainMenu/Menu"]
layout_mode = 2
text = "Quit"

[node name="Options" type="Control" parent="MainMenu"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu/Options"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -26.5
offset_top = -33.0
offset_right = 26.5
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2

[node name="Video" type="Button" parent="MainMenu/Options/VBoxContainer"]
layout_mode = 2
text = "Video"

[node name="Audio" type="Button" parent="MainMenu/Options/VBoxContainer"]
layout_mode = 2
text = "Audio"

[node name="BackOptions" type="Button" parent="MainMenu/Options"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -22.5
offset_top = -31.0
offset_right = 22.5
grow_horizontal = 2
grow_vertical = 0
text = "Back"

[node name="Video" type="Control" parent="MainMenu"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MainMenu/Video"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label organizer" type="VBoxContainer" parent="MainMenu/Video/HBoxContainer"]
layout_mode = 2

[node name="Settings for" type="Label" parent="MainMenu/Video/HBoxContainer/Label organizer"]
layout_mode = 2

[node name="video here" type="Label" parent="MainMenu/Video/HBoxContainer/Label organizer"]
layout_mode = 2

[node name="the options" type="Label" parent="MainMenu/Video/HBoxContainer/Label organizer"]
layout_mode = 2

[node name="Settings" type="VBoxContainer" parent="MainMenu/Video/HBoxContainer"]
layout_mode = 2

[node name="BackVideo" type="Button" parent="MainMenu/Video"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -22.5
offset_top = -31.0
offset_right = 22.5
grow_horizontal = 2
grow_vertical = 0
text = "Back"

[node name="Audio" type="Control" parent="MainMenu"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="BackAudio" type="Button" parent="MainMenu/Audio"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -22.0
offset_top = 292.0
offset_right = 23.0
offset_bottom = 323.0
grow_horizontal = 2
grow_vertical = 0
text = "Back"

[node name="PanelContainer" type="PanelContainer" parent="MainMenu/Audio"]
layout_mode = 0
offset_left = -151.0
offset_top = -13.0
offset_right = 150.0
offset_bottom = 64.0
theme_override_styles/panel = ExtResource("2_pfswi")

[node name="HBoxContainer" type="HBoxContainer" parent="MainMenu/Audio/PanelContainer"]
layout_mode = 2

[node name="Label Organizer" type="VBoxContainer" parent="MainMenu/Audio/PanelContainer/HBoxContainer"]
layout_mode = 2

[node name="Master" type="Label" parent="MainMenu/Audio/PanelContainer/HBoxContainer/Label Organizer"]
modulate = Color(0, 0, 0, 1)
layout_mode = 2
text = "Master"

[node name="Music" type="Label" parent="MainMenu/Audio/PanelContainer/HBoxContainer/Label Organizer"]
modulate = Color(0, 0, 0, 1)
layout_mode = 2
text = "Music"

[node name="SoundFX" type="Label" parent="MainMenu/Audio/PanelContainer/HBoxContainer/Label Organizer"]
modulate = Color(0, 0, 0, 1)
layout_mode = 2
text = "SoundFX"

[node name="Slider Organizer" type="VBoxContainer" parent="MainMenu/Audio/PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Master" type="HSlider" parent="MainMenu/Audio/PanelContainer/HBoxContainer/Slider Organizer"]
layout_mode = 2
size_flags_vertical = 6

[node name="Music" type="HSlider" parent="MainMenu/Audio/PanelContainer/HBoxContainer/Slider Organizer"]
layout_mode = 2
size_flags_vertical = 6

[node name="SoundFX" type="HSlider" parent="MainMenu/Audio/PanelContainer/HBoxContainer/Slider Organizer"]
layout_mode = 2
size_flags_vertical = 6

[node name="Name" type="Label" parent="MainMenu"]
modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_left = 497.0
offset_top = 173.0
offset_right = 706.0
offset_bottom = 236.0
theme_override_fonts/font = ExtResource("3_62dwi")
theme_override_font_sizes/font_size = 38
text = "LifeQuest
"

[node name="Marblebackground" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(944, 634)
texture = ExtResource("2_rxi75")
metadata/_edit_lock_ = true

[node name="Logo" type="Sprite2D" parent="."]
position = Vector2(575, 81)
scale = Vector2(0.469484, 0.469484)
texture = ExtResource("3_rufve")

[connection signal="pressed" from="MainMenu/Menu/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MainMenu/Menu/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="MainMenu/Menu/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="MainMenu/Options/VBoxContainer/Video" to="." method="_on_video_pressed"]
[connection signal="pressed" from="MainMenu/Options/VBoxContainer/Audio" to="." method="_on_audio_pressed"]
[connection signal="pressed" from="MainMenu/Options/BackOptions" to="." method="_on_back_options_pressed"]
[connection signal="pressed" from="MainMenu/Video/BackVideo" to="." method="_on_back_video_pressed"]
[connection signal="pressed" from="MainMenu/Audio/BackAudio" to="." method="_on_back_audio_pressed"]
[connection signal="value_changed" from="MainMenu/Audio/PanelContainer/HBoxContainer/Slider Organizer/Master" to="." method="_on_master_value_changed"]
[connection signal="value_changed" from="MainMenu/Audio/PanelContainer/HBoxContainer/Slider Organizer/Music" to="." method="_on_music_value_changed"]
[connection signal="value_changed" from="MainMenu/Audio/PanelContainer/HBoxContainer/Slider Organizer/SoundFX" to="." method="_on_sound_fx_value_changed"]
